still debugging the app server. on windows, its having a problem with lock, cond_wait and lock cond_signal

--- a/hello.html
+++ b/hello.html
@@ -1,6 +1,13 @@
 <html>
   <head>
 <title>Yote Hello World Example</title>
+<script src="./jquery-latest.js"></script>
+<script src="./json2.js"></script>
+<script src="./jquery.base64.min.js"></script>
+<script src="./gserv.js"></script>
+<script>
+ 
+</script>
 </head>
 <body>
 <h1>Yote Hello World Example</h1>
