reconnect db with each command processing loop for safety

--- a/t.html
+++ b/t.html
@@ -2,6 +2,7 @@
 <script src="./jquery-latest.js"></script>
 <script src="./jquery.dumper.js"></script>
 <script src="./jquery.base64.min.js"></script>
+<script src="./jquery.jsonp-2.1.4.min.js"></script>
 <script src="./json2.js"></script>
 <script src="./gserv.js"></script>
 </head>
