--- a/hello.html
+++ b/hello.html
@@ -8,19 +8,94 @@
     <script src="./js/gserv.js"></script>
     <script>
     $().ready(function(){
-        $.gServ.init("http://127.0.0.1/cgi-bin/gserv.cgi");
-        var hello_app = $.gServ.get_app('GServ::Hello');
-        
+        var hello_app;
+        function hello() {
+	   if( typeof hello_app === 'undefined' ) {
+	      hello_app = $.gServ.init("http://"+location.host+"/cgi-bin/gserv.cgi").get_app('GServ::Hello' );
+           }
+           var result = hello_app.hello({ name:$('#txt').val() } );
+           alert( result );
+
+	}	
         $('#button').click( function() {
-            var result = hello_app.hello({ name:$('#txt').val() } );
-            alert( result );
+	       hello();
         } );
+        $('#txt').keypress( function(e) { 
+            if(e.which == 13 ) { 
+	       hello();
+	    }
+        } );
+
     });
     </script>
+    <style>
+      .emp { font-family:"Lucida Console",monospace;  }
+    </style>
   </head>
   <body>
-    <h1>Yote Hello World Example</h1>
+    <h1>Yote Application Server Hello World Example</h1>
+Get Yote (Gserv) on github : <a href=https://github.com/ewolf/GServ>https://github.com/ewolf/GServ</a>
+<hr>
+    <h2>Hello World</h2>
+    <input type=text id=txt><BR><button type=button id=button>Say Hi</button>
+<hr>
+<h2>What's going on here?</h2>
+<blockquote>
+<p>
+ GServ (or Yote) provides javascript objects that are linked to perl objects running in an application server. These perl objects get the following features :
+<ul>
+<li>Automatic Persistance without a schema.</li>
+<li>idiomatic getters and setters for fields. Calling set_foo("bar") on a GServ object automatically creates and populates the field 'foo'. Calling get_foo("bar") returns the value of foo, populating it with 'bar' if its not yet defined. Fields may contain scalars, hashes, arrays and GServ objects.</li>
+<li>more syntactic sugar : add_to_mylist, remove_from_mylist causes an array field 'mylist' to be created and populated</li>
+<li>Circular References are allowed</li>
+<li>public methods (beginning with a lower case letter) may be invoked by javascript objects</li>
+<li>Methods for creating accounts, logging in</li>
+<li>Tokens can be used for logging in, and are linked to IP</li>
+<li>Passwords are not plaintext.</li>
+<li>Ability to limit access to which accounts may access which methods or objects</li>
+<li>GServ object method execution is thread-safe. GServ application server receives messages in different threads, but has a single threaded execution process. </li>
+</ul>
+
+</p>
+<p>
+Once GServ has been set up, the client and server are written as described below.<ul>
+<li>The client contacts the server and gets the (singleton) root app with the perl package name (GServ::Hello).</li>
+<li>The hello method is called on the app and its response is stored in result.</li>
+<li></li>
+</ul>
+</p>
+</blockquote>
+<hr>
+    <h2>Client Side Code</h2>
+<blockquote>
+    <pre>
+&lt;html&gt;&lt;head&gt;&lt;title&gt;Hello World&lt;/title&gt;
+&lt;script src="./js/jquery-latest.js"&gt;&lt;/script&gt;
+&lt;script src="./js/jquery.dumper.js"&gt;&lt;/script&gt;
+&lt;script src="./js/jquery.base64.min.js"&gt;&lt;/script&gt;
+&lt;script src="./js/json2.js"&gt;&lt;/script&gt;
+&lt;script src="./js/gserv.js"&gt;&lt;/script&gt;
+&lt;script&gt;
+  $().ready(function(){ <span class=emp>
+      var hello_app = $.gServ.init("http://"+location.host+"/cgi-bin/gserv.cgi").get_app('GServ::Hello');
+      $('#button').click( function() {
+          var result = hello_app.hello({ name:$('#txt').val() } );
+          alert( result ); //get the message from running the hello method.
+          alert( 'testfield is ' + hello_app.get_testfield() ); //get the value of testfield that is attached to the app
+          var counter = hello_app.get_counter();                //get the counter object that is attached to the app
+          alert( 'counter is at ' + counter.get_count() );      //get the value of the count field of the counter object attached to the app
+      } );
+</emp>
+  });
+&lt;/script&gt;&lt;/head&gt;
+&lt;body&gt;&lt;h1&gt;Hello World&lt;/h1&gt;
+&lt;input type=text id=txt&gt;&lt;BR&gt;&lt;button type=button id=button&gt;Say Hi&lt;/button&gt;
+&lt;/body&gt;&lt;/html&gt;
+    </pre>
+</blockquote>
+<hr>
     <h2>Server Side Code</h2>
+<blockquote>
     <pre>
 package GServ::Hello;
 
@@ -47,32 +122,7 @@ sub hello {
 
 1;
     </pre>
-    <h2>Client Side Code</h2>
-    <pre>
-&lt;html&gt;&lt;head&gt;&lt;title&gt;Hello World&lt;/title&gt;
-&lt;script src="./js/jquery-latest.js"&gt;&lt;/script&gt;
-&lt;script src="./js/jquery.dumper.js"&gt;&lt;/script&gt;
-&lt;script src="./js/jquery.base64.min.js"&gt;&lt;/script&gt;
-&lt;script src="./js/json2.js"&gt;&lt;/script&gt;
-&lt;script src="./js/gserv.js"&gt;&lt;/script&gt;
-&lt;script&gt;
-  $().ready(function(){ 
-      var hello_app = $.gServ.init("http://"+location.host+"/cgi-bin/gserv.cgi").get_app('GServ::Hello');
-      $('#button').click( function() {
-          var result = hello_app.hello({ name:$('#txt').val() } );
-          alert( result ); //get the message from running the hello method.
-          alert( 'testfield is ' + hello_app.get_testfield() ); //get the value of testfield that is attached to the app
-          var counter = hello_app.get_counter();                //get the counter object that is attached to the app
-          alert( 'counter is at ' + counter.get_count() );      //get the value of the count field of the counter object attached to the app
-      } );
-  });
-&lt;/script&gt;&lt;/head&gt;
-&lt;body&gt;&lt;h1&gt;Hello World&lt;/h1&gt;
-&lt;input type=text id=txt&gt;&lt;BR&gt;&lt;button type=button id=button&gt;Say Hi&lt;/button&gt;
-&lt;/body&gt;&lt;/html&gt;
-    </pre>
+</blockquote>
     <hr>
-    <h1>Hello World</h1>
-    <input type=text id=txt><BR><button type=button id=button>Say Hi</button>
   </body>
 </html>
