--- a/dev/hello_test.html
+++ b/dev/hello_test.html
@@ -3,10 +3,10 @@
 <script src="../js/jquery.dumper.js"></script>
 <script src="../js/jquery.base64.min.js"></script>
 <script src="../js/json2.js"></script>
-<script src="../js/gserv.js"></script>
+<script src="../js/yote.js"></script>
 <script>
   $().ready(function(){ 
-      var hello_app = $.gServ.init("http://"+location.host+"/cgi-bin/dev/gserv.cgi").get_app('GServ::Hello');
+      var hello_app = $.yote.init("http://"+location.host+"/cgi-bin/dev/yote.cgi").get_app('Yote::Test::Hello');
       $('#button').click( function() {
           var result = hello_app.hello({ name:$('#txt').val() } );
 	  hello_app.reload();
