--- a/hello.html
+++ b/hello.html
@@ -5,13 +5,13 @@
     <script src="./js/jquery.dumper.js"></script>
     <script src="./js/jquery.base64.min.js"></script>
     <script src="./js/json2.js"></script>
-    <script src="./js/gserv.js"></script>
+    <script src="./js/yote.js"></script>
     <script>
     $().ready(function(){
         var hello_app;
         function hello() {
 	   if( typeof hello_app === 'undefined' ) {
-	      hello_app = $.gServ.init("http://"+location.host+"/cgi-bin/gserv.cgi").get_app('GServ::Hello' );
+	      hello_app = $.yote.init("http://"+location.host+"/cgi-bin/yote.cgi").get_app('Yote::Test::Hello' );
            }
            var result = hello_app.hello({ name:$('#txt').val() } );
            alert( result );
@@ -34,7 +34,7 @@
   </head>
   <body>
     <h1>Yote Application Server Hello World Example</h1>
-Get Yote (Gserv) on github : <a href=https://github.com/ewolf/GServ>https://github.com/ewolf/GServ</a>
+Get Yote  on github : <a href=https://github.com/ewolf/GServ>https://github.com/ewolf/GServ</a>
 <hr>
     <h2>Hello World</h2>
     <input type=text id=txt><BR><button type=button id=button>Say Hi</button>
@@ -42,10 +42,10 @@ Get Yote (Gserv) on github : <a href=https://github.com/ewolf/GServ>https://gith
 <h2>What's going on here?</h2>
 <blockquote>
 <p>
- GServ (or Yote) provides javascript objects that are linked to perl objects running in an application server. These perl objects get the following features :
+ Yote provides javascript objects that are linked to perl objects running in an application server. These perl objects get the following features :
 <ul>
 <li>Automatic Persistance without a schema.</li>
-<li>idiomatic getters and setters for fields. Calling set_foo("bar") on a GServ object automatically creates and populates the field 'foo'. Calling get_foo("bar") returns the value of foo, populating it with 'bar' if its not yet defined. Fields may contain scalars, hashes, arrays and GServ objects.</li>
+<li>idiomatic getters and setters for fields. Calling set_foo("bar") on a Yote object automatically creates and populates the field 'foo'. Calling get_foo("bar") returns the value of foo, populating it with 'bar' if its not yet defined. Fields may contain scalars, hashes, arrays and Yote objects.</li>
 <li>more syntactic sugar : add_to_mylist, remove_from_mylist causes an array field 'mylist' to be created and populated</li>
 <li>Circular References are allowed</li>
 <li>public methods (beginning with a lower case letter) may be invoked by javascript objects</li>
@@ -53,13 +53,13 @@ Get Yote (Gserv) on github : <a href=https://github.com/ewolf/GServ>https://gith
 <li>Tokens can be used for logging in, and are linked to IP</li>
 <li>Passwords are not plaintext.</li>
 <li>Ability to limit access to which accounts may access which methods or objects</li>
-<li>GServ object method execution is thread-safe. GServ application server receives messages in different threads, but has a single threaded execution process. </li>
+<li>Yote object method execution is thread-safe. Yote web application server receives messages in different threads, but has a single threaded execution process. </li>
 </ul>
 
 </p>
 <p>
-Once GServ has been set up, the client and server are written as described below.<ul>
-<li>The client contacts the server and gets the (singleton) root app with the perl package name (GServ::Hello).</li>
+Once Yote has been set up, the client and server are written as described below.<ul>
+<li>The client contacts the server and gets the (singleton) root app with the perl package name (Yote::Hello).</li>
 <li>The hello method is called on the app and its response is stored in result.</li>
 <li></li>
 </ul>
@@ -74,10 +74,10 @@ Once GServ has been set up, the client and server are written as described below
 &lt;script src="./js/jquery.dumper.js"&gt;&lt;/script&gt;
 &lt;script src="./js/jquery.base64.min.js"&gt;&lt;/script&gt;
 &lt;script src="./js/json2.js"&gt;&lt;/script&gt;
-&lt;script src="./js/gserv.js"&gt;&lt;/script&gt;
+&lt;script src="./js/yote.js"&gt;&lt;/script&gt;
 &lt;script&gt;
   $().ready(function(){ <span class=emp>
-      var hello_app = $.gServ.init("http://"+location.host+"/cgi-bin/gserv.cgi").get_app('GServ::Hello');
+      var hello_app = $.yote.init("http://"+location.host+"/cgi-bin/yote.cgi").get_app('Yote::Hello');
       $('#button').click( function() {
           var result = hello_app.hello({ name:$('#txt').val() } );
           alert( result ); //get the message from running the hello method.
@@ -97,18 +97,18 @@ Once GServ has been set up, the client and server are written as described below
     <h2>Server Side Code</h2>
 <blockquote>
     <pre>
-package GServ::Hello;
+package Yote::Hello;
 
 use strict;
 
-use GServ::Obj;
+use Yote::Obj;
 
-use base 'GServ::AppRoot';
+use base 'Yote::AppRoot';
 
 sub init {
     my $self = shift;
     #when the hello is created for the first time, install a counter to track how many times it is called
-    $self-&gt;set_counter( new GServ::Obj() );  
+    $self-&gt;set_counter( new Yote::Obj() );  
 }
 
 sub hello {
