--- a/test/hello.html
+++ b/test/hello.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <h1>Yote Application Server Hello World Example</h1>
-Get Yote  on github : <a href=https://github.com/ewolf/GServ>https://github.com/ewolf/GServ</a>
+Get Yote  on github : <a href=https://github.com/ewolf/Yote>https://github.com/ewolf/Yote</a>
 <hr>
     <h2>Hello World</h2>
     <input type=text id=txt><BR><button type=button id=button>Say Hi</button>
