--- a/sample/hello.html
+++ b/sample/hello.html
@@ -1,18 +1,15 @@
 <html>
   <head>
     <title>Yote Hello World Example</title>
-    <script src="./js/jquery-latest.js"></script>
-    <script src="./js/jquery.dumper.js"></script>
-    <script src="./js/jquery.base64.min.js"></script>
-    <script src="./js/json2.js"></script>
-    <script src="./js/yote.js"></script>
+    <script src="JSPATHjquery-latest.js"></script>
+    <script src="JSPATHjquery.dumper.js"></script>
+    <script src="JSPATHjquery.base64.min.js"></script>
+    <script src="JSPATHjson2.js"></script>
+    <script src="JSPATHyote/yote.js"></script>
     <script>
     $().ready(function(){
-        var hello_app;
+        var hello_app = $.yote.get_app('Yote::Test::Hello');
         function hello() {
-	   if( typeof hello_app === 'undefined' ) {
-	      hello_app = $.yote.init("http://"+location.host+"/cgi-bin/yote.cgi").get_app('Yote::Test::Hello' );
-           }
            var result = hello_app.hello({ name:$('#txt').val() } );
            alert( result );
 
@@ -70,11 +67,11 @@ Once Yote has been set up, the client and server are written as described below.
 <blockquote>
     <pre>
 &lt;html&gt;&lt;head&gt;&lt;title&gt;Hello World&lt;/title&gt;
-&lt;script src="./js/jquery-latest.js"&gt;&lt;/script&gt;
-&lt;script src="./js/jquery.dumper.js"&gt;&lt;/script&gt;
-&lt;script src="./js/jquery.base64.min.js"&gt;&lt;/script&gt;
-&lt;script src="./js/json2.js"&gt;&lt;/script&gt;
-&lt;script src="./js/yote.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHjquery-latest.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHjquery.dumper.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHjquery.base64.min.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHjson2.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHyote.js"&gt;&lt;/script&gt;
 &lt;script&gt;
   $().ready(function(){ <span class=emp>
       var hello_app = $.yote.init("http://"+location.host+"/cgi-bin/yote.cgi").get_app('Yote::Hello');
