--- a/sample/index.html
+++ b/sample/index.html
@@ -6,6 +6,7 @@
     <script src="/js/jquery.base64.min.js"></script>
     <script src="/js/json2.js"></script>
     <script src="/js/yote/yote.js"></script>
+    <script src="/js/yote/yote.util.js"></script>
     <script>
     $().ready(function(){
         var hello_app;
@@ -26,119 +27,13 @@
 	        }
         } );
 
-        make_login_box( '#login_div' );
-
-        function make_login_box(target) {
-            $(target).empty();
-            $(target).append( "<span id=login_msg class=warning>zzz</span><BR>" +
-
-                              // do login
-                              "<div style=display:none id=y_login_div>" +
-                              "<table><tr><td>Handle</td><td><input class=login id=login type=text></td>" +
-                              "</tr><tr><td>Password</td><td><input class=login id=password type=password>" +
-                              "</td></tr></table><br>" +
-                              "<a href='#' id=register_link>Register</a>" +
-                              "<input class=login id=login_submit type=submit value=Login>" +
-                              "</div>" +
-
-                              // not logged in
-                              "<div style=display:none id=y_not_loggedin>" +
-                              "Not logged in. <a href='#' id=login_link>Login</a><BR>" +
-                              "<a href='#' id=register_link>Register</a>" +
-                              "</div>" +
-
-                              // register account
-                              "<div style=display:none id=y_register_account>" +
-                              "<table><tr><td>Handle</td><td><input class=register id=login type=text></td>" +
-                              "</tr><tr><td>Email</td><td><input class=register id=email type=text>" +
-                              "</tr><tr><td>Password</td><td><input class=register id=password type=password>" +
-                              "<input id=register_submit type=submit value=Register>" +
-                              "</div>" +
-
-                              // recover
-                              "<div style=display:none id=y_recover_account>" +
-                              "Email <input class=recover id=email> " +
-                              "<input id=recover_submit type=submit value=Recover>" +
-                              "</div>" +
-
-                              // logged in
-                              "<div style=display:none id=y_logged_in>" +
-                              "Logged in as <span class=logged_in id=handle></span><BR> [<a id=logout_link href='#'>logout</a>]" +
-                              "</div>"
-                            );
-            var install_function = function( f ) { return f; }
-            var on_enter = function(f) { return function(e) { if(e.which == 13 ) { f(); } } }
-            var to_login = function(msg) {
-                msg = msg || '';
-                $( target + ' > #login_msg' ).empty();
-                $( target + ' > #login_msg' ).append( msg );      
-                $( target + ' > div ' ).hide();
-                $( target + ' > div#y_login_div' ).show();
-            }
-            var to_register = function(msg) {
-                msg = msg || '';
-                $( target + ' > #login_msg' ).empty();
-                $( target + ' > #login_msg' ).append( msg );      
-
-                $( target + ' > div ' ).hide();
-                $( target + ' > div#y_register_account' ).show();
-            }
-            var to_logged_in = function(name) {
-                $( target + ' > div ' ).hide();
-                $( target + ' .logged_in#handle' ).val(name);
-                $( target + ' > div#y_logged_in' ).show();                
-            }
-            var do_login = function() {
-                $.yote.login( $( target + " .login#login").val(),
-                              $(target + " .login#password").val(),
-                              function(data) { //pass
-                                  to_logged_in($.yote.acct.get('handle'));
-                              },
-
-                              function(data) { //fail
-                                  to_login(data);
-                              }
-                            );
-            }
-            var do_register = function() {
-                $.yote.create_account( $( target + " .register#login").val(),
-                                       $( target + " .register#email").val(),
-                                       $( target + " .register#password").val(),
-                                       function(data) { //pass
-                                           to_logged_in($.yote.acct.get('handle'));
-                                       },
-                                       
-                                       function(data) { //fail
-                                           to_register(data);
-                                       }
-                                     );                
-            }
-            var logout = function() {
-                $( target + ' > div ' ).hide();
-                $( target + ' > div#y_not_loggedin' ).show();
-                $( target + ' #password' ).val('');
-            }
-            //link actions
-            $( target + ' #login_link').click( install_function(to_login) );
-            $( target + ' #register_link').click( install_function(to_register) );
-
-            //button actions
-            $( target + ' #login_submit').click( install_function(do_login) );
-            $( target + ' .login#login,' + target + ' .login#password' ).keypress( on_enter(do_login) );
-            $( target + ' #register_submit').click( install_function(do_register) );
-            $( target + ' .register#login,' + target + ' .register#password,' + target + ' .register#email' ).keypress( on_enter(do_register) );
-
-            if( $.yote.is_logged_in() ) {
-                var acct = $.yote.get_account();
-                $( target + ' > .logged_in#handle' ).val( acct.get('handle') );
-                $( target + ' > div' ).hide();
-                $( target + ' > div#y_logged_in' ).show();
-            } else {
-                logout();
-            }
-
-        } //make_login_box
-    });
+	$.yote.util.make_login_box( { 
+		target:'#login_div'/*,
+				     on_login:function(){ var x = $.yote.get_app('Yote::Test::TestAppNeedsLogin'); alert(x.get_scalar()); },
+				     on_logout:function(){ var x = $.yote.get_app('Yote::Test::TestAppNeedsLogin'); alert(x.get_scalar()) }*/
+		    });
+	
+	});
     </script>
     <style>
       .emp   { font-family:"Lucida Console",monospace;  }
