added obj_explore html file. fixed path bugs in installer for sample stuff

--- a/html/hello.html
+++ b/html/hello.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>Yote Hello World Example</title>
-    <script src="JSPATH/jquery-latest.js"></script>
-    <script src="JSPATH/jquery.dumper.js"></script>
-    <script src="JSPATH/jquery.base64.min.js"></script>
-    <script src="JSPATH/json2.js"></script>
-    <script src="JSPATH/yote/yote.js"></script>
+    <script src="JSPATHjquery-latest.js"></script>
+    <script src="JSPATHjquery.dumper.js"></script>
+    <script src="JSPATHjquery.base64.min.js"></script>
+    <script src="JSPATHjson2.js"></script>
+    <script src="JSPATHyote/yote.js"></script>
     <script>
     $().ready(function(){
         var hello_app = $.yote.get_app('Yote::Test::Hello');
@@ -67,11 +67,11 @@ Once Yote has been set up, the client and server are written as described below.
 <blockquote>
     <pre>
 &lt;html&gt;&lt;head&gt;&lt;title&gt;Hello World&lt;/title&gt;
-&lt;script src="JSPATH/jquery-latest.js"&gt;&lt;/script&gt;
-&lt;script src="JSPATH/jquery.dumper.js"&gt;&lt;/script&gt;
-&lt;script src="JSPATH/jquery.base64.min.js"&gt;&lt;/script&gt;
-&lt;script src="JSPATH/json2.js"&gt;&lt;/script&gt;
-&lt;script src="JSPATH/yote.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHjquery-latest.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHjquery.dumper.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHjquery.base64.min.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHjson2.js"&gt;&lt;/script&gt;
+&lt;script src="JSPATHyote.js"&gt;&lt;/script&gt;
 &lt;script&gt;
   $().ready(function(){ <span class=emp>
       var hello_app = $.yote.init("http://"+location.host+"/cgi-bin/yote.cgi").get_app('Yote::Hello');
