--- a/html/hello_test.html
+++ b/html/hello_test.html
@@ -3,7 +3,7 @@
 <script src="../js/jquery.dumper.js"></script>
 <script src="../js/jquery.base64.min.js"></script>
 <script src="../js/json2.js"></script>
-<script src="../js/yote/yote.js"></script>
+<script src="../js/yote.js"></script>
 <script>
   $().ready(function(){ 
       var hello_app = $.yote.init("http://"+location.host+"/cgi-bin/dev/yote.cgi").get_app('Yote::Test::Hello');
